; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao.c_ao_add_events.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao.c_ao_add_events.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { i32, i32 (i32)*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ao_add_events(%struct.ao* %0, i32 %1) #0 {
  %3 = alloca %struct.ao*, align 8
  %4 = alloca i32, align 4
  store %struct.ao* %0, %struct.ao** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ao*, %struct.ao** %3, align 8
  %6 = getelementptr inbounds %struct.ao, %struct.ao* %5, i32 0, i32 2
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @atomic_fetch_or(i32* %6, i32 %7)
  %9 = load %struct.ao*, %struct.ao** %3, align 8
  %10 = getelementptr inbounds %struct.ao, %struct.ao* %9, i32 0, i32 1
  %11 = load i32 (i32)*, i32 (i32)** %10, align 8
  %12 = load %struct.ao*, %struct.ao** %3, align 8
  %13 = getelementptr inbounds %struct.ao, %struct.ao* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 %11(i32 %14)
  ret void
}

declare dso_local i32 @atomic_fetch_or(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
